src/test/lab3/invalid/XX-Fail39.slac
class Calls {
    method calls() : Int = {
        p = k.call(a b);
        1
    }
}

method main() : Unit = { println("42") }
